<resources>
    <string name="app_name">Krypto</string> 
    <string name="menu_settings">Settings</string> 
    <string name="title_activity_krypto">KryptoActivity</string>
    <string name="box_desc">Box</string>  
    <string name="circle_desc">Circle</string>
    <string name="menu">Main Menu</string>
    <string name="new_puz">New Puzzle</string> 
    <string name="filler_num">88</string> 
    <string name="goal_num_text_size">75dp</string> 
    <string name="button_text_size">20dp</string> 
    <string name="num_text_size">60dp</string> 
    <string name="op_text_size">40dp</string> 
    <string name="add">+</string> 
    <string name="subtract">&#8722;</string> 
    <string name="multiply">&#215;</string> 
    <string name="divide">&#247;</string>
    <string name="right_arrow">Turn device right to calculate</string>
    <string name="up_arrow">Turn device up to reset puzzle</string>
    <string name="left_arrow">Turn device left to undo last calculation</string>
    <string name="main_menu_button_10">1-10</string>
    <string name="main_menu_button_25">1-25</string>
    <string name="main_menu_image">Krypto icon</string>
    <string name="quit">Quit</string>
    <string name="main_menu_instr">(Select a difficulty)</string>
    <string name="instructions1">Combine the five numbers using +, &#8722;, &#215;, &#247; to reach the goal number at the top of the screen.</string>
    <string name="instructions2">Tip device to:</string>
    <string name="instructions3">Undo</string>
    <string name="instructions4">Reset</string>
    <string name="instructions5">Calculate</string>
    <string name="startGame">Start Game</string>
    <string name="success">Success!!</string>
    <!-- <string name="instructions2">Turn the device right to calculate the expression.</string>
    <string name="instructions3">Turn the device left to undo the last calculation.</string>
    <string name="instructions4">Tip the device back to reset the puzzle.</string> -->
</resources>