<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/goal_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/filler_num"
        android:textSize="150dp" />
        
     <Button
         android:id="@+id/main_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="20dp"
         android:minWidth="250dp"
         android:text="@string/menu"
         android:textSize="50dp" />
        
    <Button
        android:id="@+id/new_puzzle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/main_menu"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:minHeight="48dp"
        android:minWidth="250dp"
        android:text="@string/new_puz"
        android:textSize="50dp" />
    
    <Button
        android:id="@+id/num4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num2"
        android:layout_alignBottom="@+id/num2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/num3"
        android:layout_marginRight="120dp"
        android:layout_marginTop="15dp"
        android:background="#D8D8D8"
        android:height="150dp"
        android:text="@string/filler_num"
        android:textSize="80dp"
        android:width="150dp" />
    
    <Button
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/num3"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="15dp"
        android:background="#D8D8D8"
        android:height="150dp"
        android:text="@string/filler_num"
        android:textSize="80dp"
        android:width="150dp" />

    <Button
        android:id="@+id/num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goal_num"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/num1"
        android:background="#D8D8D8"
        android:height="150dp"
        android:text="@string/filler_num"
        android:textSize="80dp"
        android:width="150dp" />

    <Button
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num3"
        android:layout_alignBottom="@+id/num3"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:background="#D8D8D8"
        android:height="150dp"
        android:text="@string/filler_num"
        android:textSize="80dp"
        android:width="150dp" />

    <Button
        android:id="@+id/num5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num3"
        android:layout_alignBottom="@+id/num3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:background="#D8D8D8"
        android:height="150dp"
        android:text="@string/filler_num"
        android:textSize="80dp"
        android:width="150dp" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/add"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:background="#D8D8D8"
        android:height="100dp"
        android:minWidth="100dp"
        android:text="@string/divide"
        android:textSize="60dp" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/add"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/add"
        android:background="#D8D8D8"
        android:height="100dp"
        android:minWidth="100dp"
        android:text="@string/subtract"
        android:textSize="60dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_menu"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:background="#D8D8D8"
        android:height="100dp"
        android:minWidth="100dp"
        android:text="@string/add"
        android:textSize="60dp" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/add"
        android:layout_toLeftOf="@id/divide"
        android:layout_marginRight="40dp"
        android:background="#D8D8D8"
        android:height="100dp"
        android:minWidth="100dp"
        android:text="@string/multiply"
        android:textSize="60dp" />

    <ImageView
        android:id="@+id/box1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/add"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="27dp"
        android:contentDescription="@string/box_desc"
        android:minHeight="160dp"
        android:minWidth="160dp"
        android:src="@drawable/box" />

    <ImageView
        android:id="@+id/box2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/box1"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_marginRight="27dp"
        android:contentDescription="@string/box_desc"
        android:minHeight="160dp"
        android:minWidth="160dp"
        android:src="@drawable/box" />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/box1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/circle_desc"
        android:minHeight="140dp"
        android:minWidth="140dp"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="23dp"
        android:layout_marginTop="14dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/right_arrow"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:src="@drawable/equals" />

    <ImageView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="14dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/up_arrow"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:src="@drawable/reset" />

</RelativeLayout>