<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_button_color"
    android:fitsSystemWindows="false" >

    <ImageView
        android:id="@+id/kryptoIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="true"
        android:contentDescription="@string/main_menu_image"
        android:maxHeight="280dp"
        android:maxWidth="280dp"
        android:src="@drawable/menu_icon" />

    <Button
        android:id="@+id/mainMenuButton25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/selected_button_color"
        android:minHeight="100dp"
        android:onClick="selectPuzzle"
        android:text="@string/main_menu_button_25"
        android:textSize="75dp"
        android:width="280dp" />

    <TextView
        android:id="@+id/Krypto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_below="@id/kryptoIcon"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@id/kryptoIcon"
        android:gravity="fill_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textSize="170dp"
        android:typeface="serif" />

    <Button
        android:id="@+id/mainMenuButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/mainMenuButton25"
        android:layout_alignLeft="@id/mainMenuButton25"
        android:layout_alignRight="@id/mainMenuButton25"
        android:layout_marginBottom="20dp"
        android:background="@color/selected_button_color"
        android:minHeight="100dp"
        android:onClick="selectPuzzle"
        android:text="@string/main_menu_button_10"
        android:textSize="75dp" />

</RelativeLayout>